--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     </title>
 </head>
 
-<body class="dx-viewport">
+<body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
